fixed button alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -190,7 +190,6 @@ Inner Wrapper
 .giantbuttons ul li{
 	font-family: 'Roboto', sans-serif;
 	font-size: 24px;
-	padding: .25em 1em .25em 1em;
 	margin: 0 auto;
 	margin-bottom: .5em;
 	border: 4px solid white;
@@ -209,6 +208,8 @@ Inner Wrapper
 .giantbuttons ul li a{
 	text-decoration: none;
 	display:block;
+	margin: .25em 1em .25em 1em;
+	width: 300px;
 }
 
 .giantbuttons ul li a:hover{
